// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput applies custom global.hover theme to options 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  outline: none;
  border: none;
}

.c2::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c2::-moz-placeholder {
  color: #e0e4ee;
}

.c2:-ms-input-placeholder {
  color: #e0e4ee;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput applies custom global.hover theme to options 2`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c0:hover {
  background-color: lightgreen;
  color: #E15151;
}

@media only screen and (max-width:512px) {
  .c1 {
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  class="c0"
  tabindex="-1"
  type="button"
>
  <div
    class="c1"
  >
    bb
  </div>
</button>
`;

exports[`MaskedInput basic 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    name="item"
    placeholder=""
    value=""
  />
</div>
`;

exports[`MaskedInput disabled 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  opacity: 0.3;
  cursor: default;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    disabled=""
    name="item"
    placeholder=""
    value=""
  />
</div>
`;

exports[`MaskedInput event target props are available option via keyboard 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  font-size: 12px;
  line-height: 16px;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput event target props are available option via mouse 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  outline: none;
  border: none;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput event target props are available option via mouse 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c4:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c1 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: kPQHBD 0.1s forwards;
  animation: kPQHBD 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
  margin-top: 4px;
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          aa
        </div>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          bb
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput event target props are available option via mouse 3`] = `""`;

exports[`MaskedInput event target props are available option via mouse 4`] = `
<div
  class="StyledMaskedInput__StyledMaskedInputContainer-aqxhco-1 ETcKa"
>
  <input
    autocomplete="off"
    class="StyledMaskedInput-aqxhco-0 jJuSWK"
    data-g-tabindex="none"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    tabindex="-1"
    value=""
  />
</div>
`;

exports[`MaskedInput icon 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c2 g {
  fill: inherit;
  stroke: inherit;
}

.c2 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c2 *[stroke*="#"],
.c2 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c2 *[fill-rule],
.c2 *[FILL-RULE],
.c2 *[fill*="#"],
.c2 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  padding-left: 16px;
}

.c3::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c3::-moz-placeholder {
  color: #e0e4ee;
}

.c3:-ms-input-placeholder {
  color: #e0e4ee;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-packjustify: center;
  -webkit-justify: center;
  -ms-flex-packjustify: center;
  justify: center;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
  left: 8px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-label="Search"
      class="c2"
      viewBox="0 0 24 24"
    >
      <path
        d="M15,15 L22,22 L15,15 Z M9.5,17 C13.6421356,17 17,13.6421356 17,9.5 C17,5.35786438 13.6421356,2 9.5,2 C5.35786438,2 2,5.35786438 2,9.5 C2,13.6421356 5.35786438,17 9.5,17 Z"
        fill="none"
        stroke="#000"
        stroke-width="2"
      />
    </svg>
  </div>
  <input
    autocomplete="off"
    class="c3"
    name="item"
    placeholder=""
    value=""
  />
</div>
`;

exports[`MaskedInput icon reverse 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c2 g {
  fill: inherit;
  stroke: inherit;
}

.c2 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c2 *[stroke*="#"],
.c2 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c2 *[fill-rule],
.c2 *[FILL-RULE],
.c2 *[fill*="#"],
.c2 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  padding-right: 16px;
}

.c3::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c3::-moz-placeholder {
  color: #e0e4ee;
}

.c3:-ms-input-placeholder {
  color: #e0e4ee;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-packjustify: center;
  -webkit-justify: center;
  -ms-flex-packjustify: center;
  justify: center;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
  right: 8px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      aria-label="Search"
      class="c2"
      viewBox="0 0 24 24"
    >
      <path
        d="M15,15 L22,22 L15,15 Z M9.5,17 C13.6421356,17 17,13.6421356 17,9.5 C17,5.35786438 13.6421356,2 9.5,2 C5.35786438,2 2,5.35786438 2,9.5 C2,13.6421356 5.35786438,17 9.5,17 Z"
        fill="none"
        stroke="#000"
        stroke-width="2"
      />
    </svg>
  </div>
  <input
    autocomplete="off"
    class="c3"
    name="item"
    placeholder=""
    value=""
  />
</div>
`;

exports[`MaskedInput mask 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value="bb!ax"
  />
</div>
`;

exports[`MaskedInput mask 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c4:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c1 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: kPQHBD 0.1s forwards;
  animation: kPQHBD 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
  margin-top: 4px;
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          aa
        </div>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          bb
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput mask 3`] = `""`;

exports[`MaskedInput next and previous without options 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput next and previous without options 2`] = `
<div
  class="StyledMaskedInput__StyledMaskedInputContainer-aqxhco-1 ETcKa"
>
  <input
    autocomplete="off"
    class="StyledMaskedInput-aqxhco-0 fYbSrC"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput option via keyboard 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput option via mouse 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  outline: none;
  border: none;
}

.c1::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-placeholder {
  color: #e0e4ee;
}

.c1:-ms-input-placeholder {
  color: #e0e4ee;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    value=""
  />
</div>
`;

exports[`MaskedInput option via mouse 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.20);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c4:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c1 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #ffffff;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: kPQHBD 0.1s forwards;
  animation: kPQHBD 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
  margin-top: 4px;
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          aa
        </div>
      </button>
    </div>
    <div
      class="c3"
    >
      <button
        class="c4"
        tabindex="-1"
        type="button"
      >
        <div
          class="c5"
        >
          bb
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput option via mouse 3`] = `""`;

exports[`MaskedInput option via mouse 4`] = `
<div
  class="StyledMaskedInput__StyledMaskedInputContainer-aqxhco-1 ETcKa"
>
  <input
    autocomplete="off"
    class="StyledMaskedInput-aqxhco-0 jJuSWK"
    data-g-tabindex="none"
    data-testid="test-input"
    id="item"
    name="item"
    placeholder="!"
    tabindex="-1"
    value=""
  />
</div>
`;
